(android) app icon and splash screen

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-firebase/app": "^21.12.3",
     "react": "19.0.0",
     "react-native": "0.78.1",
-    "react-native-rename": "^3.2.16"
+    "react-native-rename": "^3.2.16",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
