--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.13.0",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.3",
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.78.1",
     "react-native-rename": "^3.2.16",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
