--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.55.0",
     "react-native": "0.78.1",
+    "react-native-nfc-manager": "^3.16.1",
     "react-native-rename": "^3.2.16",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
